--- a/index.html
+++ b/index.html
@@ -5,35 +5,211 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Latihan Reading Korea - 40 Soal</title>
     <style>
-        /* Style sama seperti sebelumnya - aku ringkas biar fokus ke script */
-        body { font-family: Arial, sans-serif; background: #e8eaf6; margin: 0; padding: 0; color: #333; }
-        .container { max-width: 900px; margin: 20px auto; padding: 20px; background: white; box-shadow: 0 0 20px rgba(0,0,0,0.1); border-radius: 16px; }
-        /* ... style lainnya copy dari versi sebelumnya ... */
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background: linear-gradient(135deg, #e8eaf6, #c5cae9);
+            margin: 0;
+            padding: 0;
+            color: #333;
+            min-height: 100vh;
+        }
+        .container {
+            max-width: 900px;
+            margin: 20px auto;
+            padding: 20px;
+            background: white;
+            box-shadow: 0 8px 32px rgba(0,0,0,0.15);
+            border-radius: 16px;
+        }
+        h1 {
+            text-align: center;
+            color: #1a237e;
+            margin-bottom: 10px;
+        }
+        .login-box, #quiz-container {
+            display: none;
+        }
+        .login-box.active, #quiz-container.active {
+            display: block;
+        }
+        input {
+            padding: 16px;
+            margin: 12px 0;
+            width: 100%;
+            box-sizing: border-box;
+            border-radius: 12px;
+            border: 2px solid #bbb;
+            font-size: 1.1em;
+        }
+        input:focus {
+            border-color: #3f51b5;
+            outline: none;
+        }
+        #kode {
+            text-transform: uppercase;
+        }
+        button {
+            padding: 16px;
+            margin: 10px 0;
+            width: 100%;
+            background: #3f51b5;
+            color: white;
+            border: none;
+            border-radius: 12px;
+            font-size: 1.2em;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        button:hover {
+            background: #283593;
+        }
+        button.submit-btn {
+            background: #d50000;
+        }
+        button.submit-btn:hover {
+            background: #b71c1c;
+        }
+        button.review-btn {
+            background: #388e3c;
+        }
+        button.review-btn:hover {
+            background: #2e7d32;
+        }
+        .timer {
+            text-align: center;
+            font-size: 2em;
+            font-weight: bold;
+            color: #d50000;
+            margin: 20px 0;
+            background: #ffebee;
+            padding: 15px;
+            border-radius: 12px;
+        }
+        .progress {
+            height: 28px;
+            background: #c5cae9;
+            border-radius: 14px;
+            margin: 20px 0;
+            overflow: hidden;
+        }
+        .progress-bar {
+            height: 100%;
+            background: #3f51b5;
+            width: 0%;
+            border-radius: 14px;
+            transition: width 0.5s ease;
+        }
+        .question {
+            display: none;
+            padding: 30px;
+            background: #e8eaf6;
+            border-radius: 16px;
+            margin-bottom: 25px;
+            border: 2px solid #c5cae9;
+        }
+        .question.active {
+            display: block;
+        }
+        .question img {
+            max-width: 100%;
+            border-radius: 16px;
+            margin: 20px 0;
+            box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+        }
+        .question audio {
+            width: 100%;
+            margin: 20px 0;
+        }
+        .options label {
+            display: block;
+            padding: 18px;
+            margin: 12px 0;
+            background: #e3f2fd;
+            border-radius: 12px;
+            cursor: pointer;
+            font-size: 1.2em;
+        }
+        .options label:hover {
+            background: #bbdefb;
+            transform: translateY(-2px);
+        }
+        .options input[type="radio"] {
+            transform: scale(1.6);
+            margin-right: 16px;
+        }
+        #result {
+            text-align: center;
+            font-size: 1.9em;
+            margin: 60px 0;
+            display: none;
+            background: #e8f5e9;
+            padding: 40px;
+            border-radius: 16px;
+            border: 3px solid #4caf50;
+        }
+        #loading {
+            text-align: center;
+            font-size: 1.4em;
+            color: #1a237e;
+            margin: 50px 0;
+            font-weight: bold;
+        }
+        .nav-buttons {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 40px;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 60px;
+            padding: 20px;
+            color: #555;
+            font-size: 0.95em;
+            border-top: 1px solid #ddd;
+        }
+        .footer strong {
+            color: #1a237e;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Latihan Reading Korea</h1>
-        <p style="text-align:center;">40 Soal | 50 Menit</p>
+        <p style="text-align:center; color:#555; font-style:italic;">40 Soal Pilihan Ganda | Waktu: 50 Menit</p>
 
-        <div id="login-box" class="active">
-            <h2>Masuk</h2>
+        <!-- Login -->
+        <div id="login-box" class="login-box active">
+            <h2>🔐 Masuk ke Latihan</h2>
             <input type="text" id="username" placeholder="Username">
             <input type="password" id="password" placeholder="Password">
             <input type="text" id="kode" placeholder="Kode Soal" maxlength="6">
-            <button onclick="login()">Mulai</button>
+            <button onclick="login()">Login & Mulai</button>
         </div>
 
-        <div id="quiz-container" style="display:none;">
-            <div class="timer" id="timer">Waktu: 50:00</div>
-            <div id="loading">Memuat soal...</div>
+        <!-- Quiz -->
+        <div id="quiz-container">
+            <div class="timer" id="timer">Waktu Tersisa: 50:00</div>
+            <div class="progress"><div class="progress-bar" id="progress"></div></div>
+            <div id="loading">Memuat soal... sabar ya bro 😎</div>
+            
             <form id="quiz-form"></form>
+
             <div class="nav-buttons">
                 <button id="prev" disabled>◄ Sebelumnya</button>
-                <button id="submit" class="submit-btn">Submit</button>
+                <button id="submit" class="submit-btn">Submit Sekarang</button>
                 <button id="next">Berikutnya ►</button>
             </div>
+
             <div id="result"></div>
+            <div style="text-align:center; margin-top:30px; display:none;" id="review-btn-container">
+                <button class="review-btn" onclick="startReview()">🔍 Review Jawaban</button>
+            </div>
+        </div>
+
+        <div class="footer">
+            © 2026 <strong>Denzuka - KimJongUn</strong><br>All Rights Reserved.
         </div>
     </div>
 
@@ -55,36 +231,60 @@
 
         const GITHUB_RAW_BASE = "https://raw.githubusercontent.com/airnetcso/latbakor/main/soal";
 
+        const totalQuestions = 40;
+        const timeLimit = 50 * 60;
         let questions = [];
+        let userAnswers = Array(totalQuestions).fill(null);
+        let current = 0;
+        let timerInterval;
+        let timeLeft = timeLimit;
         let currentFile = "";
+        let currentUsername = "";
+        let isSubmitted = false;
+        let isReviewMode = false;
 
         function login() {
             const user = document.getElementById('username').value.trim();
             const pass = document.getElementById('password').value.trim();
             const kode = document.getElementById('kode').value.trim().toUpperCase();
 
-            if (validCredentials[user] === pass && kodeMapping[kode]) {
+            if (validCredentials[user] && validCredentials[user] === pass && kodeMapping[kode]) {
+                currentUsername = user;
                 currentFile = kodeMapping[kode];
-                document.getElementById('login-box').style.display = 'none';
-                document.getElementById('quiz-container').style.display = 'block';
+                document.getElementById('login-box').classList.remove('active');
+                document.getElementById('quiz-container').classList.add('active');
+                document.getElementById('loading').textContent = `Memuat paket ${kode}...`;
+                startTimer();
                 loadQuestions();
             } else {
-                alert("Salah bro! Cek username, password, atau kode soal.");
+                alert("Username, Password, atau Kode Soal salah bro!");
             }
         }
 
+        function startTimer() {
+            timerInterval = setInterval(() => {
+                timeLeft--;
+                const mins = String(Math.floor(timeLeft / 60)).padStart(2, '0');
+                const secs = String(timeLeft % 60).padStart(2, '0');
+                document.getElementById('timer').textContent = `Waktu Tersisa: ${mins}:${secs}`;
+                if (timeLeft <= 120) document.getElementById('timer').style.background = '#ffcdd2';
+                if (timeLeft <= 0 && !isSubmitted) {
+                    clearInterval(timerInterval);
+                    submitQuiz(true);
+                }
+            }, 1000);
+        }
+
         async function loadQuestions() {
-            const url = `${GITHUB_RAW_BASE}/${currentFile}?t=${Date.now()}`;
             try {
-                const res = await fetch(url);
-                if (!res.ok) throw new Error("File tidak ditemukan atau error server");
+                const res = await fetch(`${GITHUB_RAW_BASE}/${currentFile}?t=${Date.now()}`);
+                if (!res.ok) throw new Error("File tidak ditemukan");
                 questions = await res.json();
-                console.log("Soal loaded:", questions.length + " soal"); // debug
                 renderQuestions();
                 document.getElementById('loading').style.display = 'none';
+                showQuestion(0);
             } catch (err) {
-                document.getElementById('loading').innerHTML = `<p style="color:red;">Gagal load soal!</p><p>${err.message}</p><p>URL: ${url}</p>`;
-                console.error(err);
+                document.getElementById('loading').innerHTML = `<p style="color:red;">Gagal load soal!</p><p>${err.message}</p>`;
             }
         }
 
@@ -92,19 +292,81 @@
             const form = document.getElementById('quiz-form');
             form.innerHTML = '';
             questions.forEach((q, i) => {
-                let html = `<div class="question"><p><strong>Passage ${i+1}:</strong> ${q.passage}</p>`;
-                if (q.audio) html += `<audio controls><source src="${q.audio}"></audio>`;
-                if (q.image) html += `<img src="${q.image}">`;
-                html += `<p><strong>Question ${i+1}:</strong> ${q.question}</p><div class="options">`;
-                for (let key in q.options) {
-                    html += `<label><input type="radio" name="q${i}" value="${key}"> ${key}. ${q.options[key]}</label>`;
+                const div = document.createElement('div');
+                div.className = 'question';
+                let html = `<p><strong>Passage ${i+1}:</strong><br>${q.passage}</p>`;
+                if (q.audio) html += `<audio controls><source src="${q.audio}" type="audio/mpeg">Audio tidak support</audio><br>`;
+                if (q.image) html += `<img src="${q.image}" alt="Gambar ${i+1}" loading="lazy">`;
+                html += `<p><strong>Pertanyaan ${i+1}:</strong><br>${q.question}</p><div class="options">`;
+                for (const [key, val] of Object.entries(q.options)) {
+                    html += `<label><input type="radio" name="q${i+1}" value="${key}"> ${key}. ${val}</label>`;
                 }
-                html += `</div></div>`;
-                form.innerHTML += html;
+                html += `</div>`;
+                div.innerHTML = html;
+                form.appendChild(div);
+
+                div.querySelectorAll('input[type="radio"]').forEach(radio => {
+                    radio.addEventListener('change', () => userAnswers[i] = radio.value);
+                });
             });
         }
 
-        // Timer, submit, review dll copy dari versi sebelumnya
+        function showQuestion(n) {
+            document.querySelectorAll('.question').forEach((q, i) => q.classList.toggle('active', i === n));
+            document.getElementById('prev').disabled = n === 0;
+            document.getElementById('next').disabled = n === totalQuestions - 1;
+            document.getElementById('progress').style.width = ((n + 1) / totalQuestions * 100) + '%';
+            current = n;
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        }
+
+        document.getElementById('next').onclick = () => { if (current < totalQuestions - 1) showQuestion(current + 1); };
+        document.getElementById('prev').onclick = () => { if (current > 0) showQuestion(current - 1); };
+        document.getElementById('submit').onclick = () => {
+            if (confirm("Yakin submit sekarang?")) submitQuiz(false);
+        };
+
+        function submitQuiz(timeUp = false) {
+            if (isSubmitted) return;
+            isSubmitted = true;
+            clearInterval(timerInterval);
+
+            let score = 0;
+            questions.forEach((q, i) => {
+                if (userAnswers[i] === q.correct) score++;
+            });
+
+            const percent = Math.round(score / totalQuestions * 100);
+            let message = timeUp ? "<strong>Waktu Habis!</strong><br><br>" : "<strong>Selesai!</strong><br><br>";
+            message += `Skor: <strong>${score}/${totalQuestions} (${percent}%)</strong><br><br>`;
+            message += percent >= 80 ? "Mantap bro! 🔥" : "Terus latihan ya! 💪";
+
+            document.getElementById('result').innerHTML = message;
+            document.getElementById('result').style.display = 'block';
+            document.querySelector('.nav-buttons').style.display = 'none';
+            document.getElementById('review-btn-container').style.display = 'block';
+        }
+
+        function startReview() {
+            isReviewMode = true;
+            document.getElementById('review-btn-container').style.display = 'none';
+            document.querySelector('.nav-buttons').style.display = 'flex';
+            document.getElementById('submit').style.display = 'none';
+            questions.forEach((_, i) => applyReviewHighlight(i));
+        }
+
+        function applyReviewHighlight(index) {
+            const labels = document.querySelectorAll(`.question:nth-child(${index + 1}) .options label`);
+            const correctKey = questions[index].correct;
+            const userAnswer = userAnswers[index];
+
+            labels.forEach(label => {
+                const key = label.querySelector('input').value;
+                label.classList.remove('correct', 'wrong', 'correct-answer');
+                if (key === correctKey) label.classList.add('correct-answer');
+                if (userAnswer === key) label.classList.add(userAnswer === correctKey ? 'correct' : 'wrong');
+            });
+        }
     </script>
 </body>
 </html>
